# ReverbRomantic

./: .gitignore  CMakeLists.txt  EPIC2_GUI_COMPLETE.md  EPIC3A_CHANGES.md  RC2_RELEASE_NOTES.md  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Damping.cpp  Damping.h  DelayLine.cpp  DelayLine.h  Diffuser.cpp  Diffuser.h  Ducking.cpp  Ducking.h  EarlyReflection.cpp  EarlyReflection.h  FreezeProcessor.cpp  FreezeProcessor.h  HybridFDN16.cpp  HybridFDN16.h  Limiter.cpp  Limiter.h  Matrix16.cpp  Matrix16.h  Modulation.cpp  Modulation.h  PitchShifter.cpp  PitchShifter.h  ShimmerProcessor.cpp  ShimmerProcessor.h  StereoWidth.cpp  StereoWidth.h  TailBloom.cpp  TailBloom.h
Source/GUI/: BottomBar.h  FFTGraph.h  Knob.h  Meter.h  PresetBar.h  RomanticLookAndFeel.h  Spectrum.h  Theme.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h
Source/Utils/: Constants.h  MathHelpers.h
